some css and views changes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 // Example using 'Cerulean' bootswatch
 //
 // First import journal variables
-@import "bootswatch/cerulean/variables";
+//@import "bootswatch/cerulean/variables";
 
 // Then bootstrap itself
 @import "bootstrap";
@@ -10,4 +10,4 @@
 @import "bootstrap-responsive";
 
 // And finally bootswatch style itself
-@import "bootswatch/cerulean/bootswatch";
+//@import "bootswatch/cerulean/bootswatch";
