peticionsoftware model test green

--- a/app/views/peticionsoftwares/_form.html.haml
+++ b/app/views/peticionsoftwares/_form.html.haml
@@ -36,9 +36,9 @@
     .controls
       = f.date_select :fechacomienzo, :class => 'date_select'
   .control-group
-    = f.label :cometario, :class => 'control-label'
+    = f.label :comentario, :class => 'control-label'
     .controls
-      = f.text_area :cometario, :class => 'text_area'
+      = f.text_area :comentario, :class => 'text_area'
   .control-group
     = f.label :fechayhora, :class => 'control-label'
     .controls
