--- a/app/views/peticionsoftwares/index.html.haml
+++ b/app/views/peticionsoftwares/index.html.haml
@@ -14,7 +14,7 @@
       %th= model_class.human_attribute_name(:software)
       %th= model_class.human_attribute_name(:dondeobtener)
       %th= model_class.human_attribute_name(:fechacomienzo)
-      %th= model_class.human_attribute_name(:cometario)
+      %th= model_class.human_attribute_name(:comentario)
       %th= model_class.human_attribute_name(:fechayhora)
       %th= model_class.human_attribute_name(:cursoacademico_id)
       %th= model_class.human_attribute_name(:created_at)
@@ -32,7 +32,7 @@
         %td= peticionsoftware.software
         %td= peticionsoftware.dondeobtener
         %td= peticionsoftware.fechacomienzo
-        %td= peticionsoftware.cometario
+        %td= peticionsoftware.comentario
         %td= peticionsoftware.fechayhora
         %td= peticionsoftware.cursoacademico_id
         %td=l peticionsoftware.created_at
