--- a/app/views/peticionsoftwares/show.html.haml
+++ b/app/views/peticionsoftwares/show.html.haml
@@ -39,9 +39,9 @@
   %br
   = @peticionsoftware.fechacomienzo
 %p
-  %strong= model_class.human_attribute_name(:cometario) + ':'
+  %strong= model_class.human_attribute_name(:comentario) + ':'
   %br
-  = @peticionsoftware.cometario
+  = @peticionsoftware.comentario
 %p
   %strong= model_class.human_attribute_name(:fechayhora) + ':'
   %br
