--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -5,7 +5,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.brand(href="#") 
+      %a.brand(href="/") 
         Bambi
       .container.nav-collapse
         %ul.nav
@@ -14,7 +14,7 @@
           %a.btn.dropdown-toggle(data-toggle="dropdown")
             Peticiones
           %ul.dropdown-menu
-            %li= link_to "Nueva Peticion", new_request_path
+            %li= link_to "Nueva Peticion de Software", new_peticionsoftware_path
 
 
 
