--- a/app/views/peticionsoftwares/new.html.haml
+++ b/app/views/peticionsoftwares/new.html.haml
@@ -1,4 +1,5 @@
 - model_class = Peticionsoftware
 .page-header
-  %h1=t '.title', :default => t('helpers.titles.new', :model => model_class.model_name.human, :default => "New #{model_class.model_name.human}")
+  %h1
+    Nueva petición de software
 = render :partial => "form"
