--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -15,6 +15,8 @@
             Peticiones
           %ul.dropdown-menu
             %li= link_to "Nueva Peticion de Software", new_peticionsoftware_path
+            %li= link_to "Ver Peticiones de Software", peticionsoftwares_path
+
 
 
 
