--- a/app/views/peticionsoftwares/edit.html.haml
+++ b/app/views/peticionsoftwares/edit.html.haml
@@ -1,4 +1,5 @@
 - model_class = Peticionsoftware
 .page-header
-  %h1=t '.title', :default => t('helpers.titles.edit', :model => model_class.model_name.human, :default => "Edit #{model_class.model_name.human}")
+  %h1
+    Editar Petición de Software
 = render :partial => "form"
