--- a/app/views/peticionsoftwares/index.html.haml
+++ b/app/views/peticionsoftwares/index.html.haml
@@ -1,43 +1,31 @@
 - model_class = Peticionsoftware
 .page-header
-  %h1=t '.title', :default => model_class.model_name.human.pluralize
+  %h1
+    Listado de peticiones
 %table.table.table-striped
   %thead
     %tr
-      %th= model_class.human_attribute_name(:id)
-      %th= model_class.human_attribute_name(:title)
-      %th= model_class.human_attribute_name(:user_id)
-      %th= model_class.human_attribute_name(:asignatura)
-      %th= model_class.human_attribute_name(:titulacion)
-      %th= model_class.human_attribute_name(:curso)
-      %th= model_class.human_attribute_name(:sistemaoperativo)
-      %th= model_class.human_attribute_name(:software)
-      %th= model_class.human_attribute_name(:dondeobtener)
-      %th= model_class.human_attribute_name(:fechacomienzo)
-      %th= model_class.human_attribute_name(:comentario)
-      %th= model_class.human_attribute_name(:fechayhora)
-      %th= model_class.human_attribute_name(:cursoacademico_id)
-      %th= model_class.human_attribute_name(:created_at)
+      %th= 'Asignatura'
+      %th= 'Titulación'
+      %th= 'Curso'
+      %th= 'Sistema Operativo'
+      %th= 'Software y Version'
+      %th= 'Fecha de Comienzo'
+      %th= 'Fecha Petición'
       %th=t '.actions', :default => t("helpers.actions")
   %tbody
     - @peticionsoftwares.each do |peticionsoftware|
       %tr
-        %td= link_to peticionsoftware.id, peticionsoftware_path(peticionsoftware)
-        %td= peticionsoftware.title
-        %td= peticionsoftware.user_id
-        %td= peticionsoftware.asignatura
+        %td= link_to peticionsoftware.asignatura, peticionsoftware
         %td= peticionsoftware.titulacion
         %td= peticionsoftware.curso
         %td= peticionsoftware.sistemaoperativo
         %td= peticionsoftware.software
-        %td= peticionsoftware.dondeobtener
         %td= peticionsoftware.fechacomienzo
-        %td= peticionsoftware.comentario
-        %td= peticionsoftware.fechayhora
-        %td= peticionsoftware.cursoacademico_id
-        %td=l peticionsoftware.created_at
+        %td= peticionsoftware.fechayhora.stamp("25/09/2012 (20:52)")
         %td
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_peticionsoftware_path(peticionsoftware), :class => 'btn btn-mini'
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), peticionsoftware_path(peticionsoftware), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
-
+          - if current_user.admin?
+            = link_to t('.destroy', :default => t("helpers.links.destroy")), peticionsoftware_path(peticionsoftware), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
+    
 = link_to t('.new', :default => t("helpers.links.new")), new_peticionsoftware_path, :class => 'btn btn-primary'
