added laboratorios_peticionsoftwares habtm

--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -16,6 +16,13 @@
           %ul.dropdown-menu
             %li= link_to "Nueva Peticion de Software", new_peticionsoftware_path
             %li= link_to "Ver Peticiones de Software", peticionsoftwares_path
+        .btn-group
+          %a.btn.dropdown-toggle(data-toggle="dropdown")
+            Laboratorios
+          %ul.dropdown-menu
+            %li= link_to "Nuevo Laboratorio", new_laboratorio_path
+            %li= link_to "Ver Laboratorios", laboratorios_path
+
 
 
 
