shows validation errors

--- a/app/views/peticionsoftwares/_form.html.haml
+++ b/app/views/peticionsoftwares/_form.html.haml
@@ -1,3 +1,5 @@
+= render 'layouts/errors', object: @peticionsoftware
+
 = form_for @peticionsoftware, :html => { :class => 'form-horizontal' } do |f|
   .control-group
     = f.label :cursoacademico_id, :class => 'control-label'
