--- a/app/views/layouts/_errors.html.haml
+++ b/app/views/layouts/_errors.html.haml
@@ -1,5 +1,6 @@
-#error_explanation
-  %h2= "#{pluralize(object.errors.count, "error")} prohibited this post from being saved:"
-  %ul
-    - object.errors.full_messages.each do |msg|
-      %li= msg
+- if object.errors.any?
+  #error_explanation
+    %h2= "#{pluralize(object.errors.count, "error")} prohibited this post from being saved:"
+    %ul
+      - object.errors.full_messages.each do |msg|
+        %li= msg
