edit button in blue

--- a/app/views/laboratorios/index.html.haml
+++ b/app/views/laboratorios/index.html.haml
@@ -17,7 +17,7 @@
         %td= laboratorio.description
         %td=l laboratorio.created_at
         %td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_laboratorio_path(laboratorio), :class => 'btn btn-mini'
+          = link_to t('.edit', :default => t("helpers.links.edit")), edit_laboratorio_path(laboratorio), :class => 'btn btn-primary btn-mini'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), laboratorio_path(laboratorio), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
 
 = link_to t('.new', :default => t("helpers.links.new")), new_laboratorio_path, :class => 'btn btn-primary'
