--- a/app/views/cursoacademicos/index.html.haml
+++ b/app/views/cursoacademicos/index.html.haml
@@ -15,7 +15,7 @@
         %td= cursoacademico.name
         %td=l cursoacademico.created_at
         %td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_cursoacademico_path(cursoacademico), :class => 'btn btn-mini'
+          = link_to t('.edit', :default => t("helpers.links.edit")), edit_cursoacademico_path(cursoacademico), :class => 'btn btn-primary btn-mini'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), cursoacademico_path(cursoacademico), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
 
 = link_to t('.new', :default => t("helpers.links.new")), new_cursoacademico_path, :class => 'btn btn-primary'
