--- a/app/views/peticionsoftwares/index.html.haml
+++ b/app/views/peticionsoftwares/index.html.haml
@@ -32,7 +32,7 @@
           - peticionsoftware.laboratorios.each do |lab| 
             =lab
         %td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_peticionsoftware_path(peticionsoftware), :class => 'btn btn-mini'
+          = link_to t('.edit', :default => t("helpers.links.edit")), edit_peticionsoftware_path(peticionsoftware), :class => 'btn btn-primary btn-mini'
           - if current_user.admin?
             = link_to t('.destroy', :default => t("helpers.links.destroy")), peticionsoftware_path(peticionsoftware), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
     
