little view improvements

--- a/app/views/peticionsoftwares/_form.html.haml
+++ b/app/views/peticionsoftwares/_form.html.haml
@@ -48,4 +48,4 @@
       = f.text_area :comentario, :class => 'text_area', :size => '20x10'
   .form-actions
     = f.submit 'Guardar', :class => 'btn btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), peticionsoftwares_path, :class => 'btn'
+    = link_to t('.cancel', :default => t("helpers.links.cancel")), peticionsoftwares_path, :class => 'btn btn-danger'
