--- a/app/views/peticionsoftwares/show.html.haml
+++ b/app/views/peticionsoftwares/show.html.haml
@@ -17,11 +17,17 @@
       Curso:
       = @peticionsoftware.curso
     %li
+      Cuatrimestre:
+      = @peticionsoftware.cuatrimestre
+    %li
       Sistema Operativo:
       = @peticionsoftware.sistemaoperativo
     %li 
       Software y version:
       = @peticionsoftware.software
+    %li 
+      Mismo que curso anterior?
+      = @peticionsoftware.anoanterior ? "Si" : "No"
     %li
       Donde obtenerlo:
       = @peticionsoftware.dondeobtener
