--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -6,24 +6,22 @@
         %span.icon-bar
         %span.icon-bar
       %a.brand(href="/") 
-        Bambi
+        Centro de Cálculo
       .container.nav-collapse
-        %ul.nav
-          %li= link_to "Home", root_path
-        .btn-group
+        .btn-group{:class => "pull-left"}
           %a.btn.dropdown-toggle(data-toggle="dropdown")
             Peticiones
           %ul.dropdown-menu
             %li= link_to "Nueva Peticion de Software", new_peticionsoftware_path
             %li= link_to "Ver Peticiones de Software", peticionsoftwares_path
-        .btn-group
+        .btn-group{:class => "pull-left"}
           %a.btn.dropdown-toggle(data-toggle="dropdown")
             Laboratorios
           %ul.dropdown-menu
             %li= link_to "Nuevo Laboratorio", new_laboratorio_path
             %li= link_to "Ver Laboratorios", laboratorios_path
-
-
-
-
-
+        = form_tag search_peticionsoftwares_path, :class => "navbar-search pull-left", :method => :get do 
+          = text_field_tag :search, params[:search], :class => "search-query", :placeholder => "Buscar"
+        %ul{:class => "nav pull-right"}
+          %li
+            = link_to "#{current_user.username}(logout)", "#"
