--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -24,4 +24,5 @@
           = text_field_tag :search, params[:search], :class => "search-query", :placeholder => "Buscar"
         %ul{:class => "nav pull-right"}
           %li
-            = link_to "#{current_user.username}(logout)", "#"
+            = link_to "#{current_user.username}(logout)", destroy_user_session_path
+
