--- a/app/views/peticionsoftwares/show.html.haml
+++ b/app/views/peticionsoftwares/show.html.haml
@@ -44,5 +44,5 @@
 
 
 .form-actions
-  = link_to t('.back', :default => t("helpers.links.back")), peticionsoftwares_path, :class => 'btn btn-primary'
-  = link_to t('.edit', :default => t("helpers.links.edit")), edit_peticionsoftware_path(@peticionsoftware), :class => 'btn btn-primary'
+  = link_to 'Atras', peticionsoftwares_path, :class => 'btn btn-primary'
+  = link_to 'Editar', edit_peticionsoftware_path(@peticionsoftware), :class => 'btn btn-primary'
